--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /build
 
 # misc
+.vscode
 .DS_Store
 *.pem
 
@@ -34,3 +35,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+package-lock.json
+backup.zip
